gccida/c0/cb_def_pragma
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cb_def_pragma/src/c-lex.c:790:22: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
void  cb_def_pragma( cpp_reader_0 *pfile, unsigned int line) 
                     ^~~~~~~~~~~~
                     cpp_reader
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cb_def_pragma/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cb_def_pragma/src/c-lex.c:792:7: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
const cpp_token_0 *s; // [rsp+8h] [rbp-28h] 
      ^~~~~~~~~~~
      cpp_token
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cb_def_pragma/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cb_def_pragma/src/c-lex.c:793:7: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
const cpp_token_0 *sa; // [rsp+8h] [rbp-28h] 
      ^~~~~~~~~~~
      cpp_token
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cb_def_pragma/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cb_def_pragma/src/c-lex.c:799:29: error: use of undeclared identifier 'arg0'
name = ( unsigned __int8 *)&arg0; 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cb_def_pragma/src/c-lex.c:800:30: error: use of undeclared identifier 'arg0'
space = ( unsigned __int8 *)&arg0; 
                             ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cb_def_pragma/src/obj/c-lex.o] Error 1
